--- a/Part1.tex
+++ b/Part1.tex
@@ -33,6 +33,16 @@
 \usepackage{tikz}
 \usetikzlibrary{external}
 \tikzexternalize
+%\tikzexternalize[prefix=\externaldirectory]
+%\tikzexternalize[prefix=\Externalized_figures]
+%\newcommand{\externaldirectory}{./Externalized_figures}
+%\tikzexternalize[prefix=\externaldirectory]
+
+
+\usepackage{tikz,pgfplots}
+\usetikzlibrary{external}
+% All auxiliary files and externalised graphics go to \externaldirectory.
+\tikzexternalize[prefix=\externaldirectory]
 \usetikzlibrary{shapes,arrows,arrows.meta,spy}
 \usetikzlibrary{calc}% needed for BB
 \usepackage{pgfplots}
@@ -83,6 +93,20 @@
 \titlespacing*{\chapter}{0pt}{50pt}{*2}
 \newcommand{\RomanNumeralCaps}[1]{\MakeUppercase{\romannumeral #1}}
 
+%**************************** Tikz  setings *******************************
+\begin{comment}
+\tikzset{
+    circ/.style={draw, circle,inner sep=0pt,minimum size=8mm, font=\scriptsize},
+    triangle/.tip={Computer Modern Rightarrow[open,angle=120:3pt]}}
+    
+\tikzset{
+  every point/.style = {circle, inner sep={.75\pgflinewidth}, opacity=1, draw, solid, fill=white},
+  point/.style={insert path={node[every point, #1]{}}}, point/.default={},
+  colored point/.style = {point={fill=#1}},
+  point name/.style = {insert path={coordinate (#1)}},
+  inherit/.style = {point/.style={insert path={node[circle, inner sep={.75\pgflinewidth}, draw, fill, #1]{}}}}
+}
+\end{comment}
 
 %**************************** Where to find images *****************************
 %\graphicspath{ {./images/} }
