--- a/Part1.tex
+++ b/Part1.tex
@@ -32,11 +32,7 @@
 %**************************** Tikz libraries *******************************
 \usepackage{tikz}
 \usetikzlibrary{external}
-\tikzexternalize
-%\tikzexternalize[prefix=\externaldirectory]
-%\tikzexternalize[prefix=\Externalized_figures]
-%\newcommand{\externaldirectory}{./Externalized_figures}
-%\tikzexternalize[prefix=\externaldirectory]
+\tikzexternalize[prefix=./Externalized_figures/]
 
 
 \usepackage{tikz,pgfplots}
