--- a/chapter4.tex
+++ b/chapter4.tex
@@ -326,66 +326,21 @@ $$\cancel{\exists } \  u \in \left[0,1\right]: \phi(u)=0$$
 So, there exist no $u\in\left[0,1\right]$ for which $\phi(u)=0$ and the curve does not intersect the null cone.\\\\
 \\$$\lozenge$$
 
-\textbf{We now show statement $\mathit{b.}$ of the exercise.}\\\\
-\begin{comment}
+\textbf{We now show statement $\mathit{b.}$ of the exercise.}\\
+
 \textit{Case b1: $P_0$ lies in region I, $P_1$  lies in region II.} \\
-Those two regions are separated by the $3$-flat (plane) $y_4=0$. So it's suffice that $R^2=0$ for $\phi(u)$ being zero. Hence $y_i=0$, $  i=1,2,3$, and the curve will cut the cone at it's apex.
+Those two regions are separated by the $3$-flat (plane) $y_4=0$. So it's necessary that $R^2=0$ for $\phi(u)$ being zero. Hence $y_i=0$, $  i=1,2,3$, and the curve will cut the cone at it's apex.
 \\\\
 \textit{Case b2: $P_0$ lies in region I or II, $P_1$  lies in region III.} \\
-Put
-\begin{align*}
-R^2&= \left(y_1\right)^2+\left(y_2\right)^2+\left(y_3\right)^2\\
-{R_{0}}^2&= \left(y^0_1\right)^2+\left(y^0_2\right)^2+\left(y^0_3\right)^2\\
-{R_{1}}^2&= \left(y^1_1\right)^2+\left(y^1_2\right)^2+\left(y^1_3\right)^2
-\end{align*}
-For the points on the curve, $R^2$ can then be written as 
-\begin{align*}
-R^2&= \left(R_1^2-R_0^2\right)u+R_0^2
-\end{align*}
-Then \begin{align}
-&\phi(u) = \left(R_1^2-R_0^2\right)u+R_0^2 - \left[\left(y_4^{(1)}\right)^2   -\left(y_4^{(0)}\right)^2 \right]u -\left(y_4^{(0)}\right)^2 \quad \text{(see (1))}
-\end{align}\\
-We have the following conditions:\\
-\begin{align*}
-\left\{\begin {matrix}
-\phi_0 < 0&\wedge &\phi_1  > 0\\\\
-R_0^2 > (y_4^{0})^2&\wedge & R_1^2 < (y_4^{1})^2
-\end{matrix}\right.
-\end{align*}
-Then, $$\exists  \  u \in \left[0,1\right]: \phi(u)=0$$
- From $(4)$ we have ,
-\begin{align}
-\phi(u)=0\quad\Rightarrow\spatie  &= -\frac{R_0^2- \left(y_4^{(0)}\right)^2}{R_1^2-R_0^2  -\left(y_4^{(1)}\right)^2  +\left(y_4^{(0)}\right)^2}
-\end{align}
-
-Let's simplify notationally the last equation. As $\phi_0 < 0\wedge \phi_1 > 0$, put $R_0^2- \left(y_4^{(0)}\right)^2=-\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=\sigma$ with both $\tau, \sigma > 0$. $(5)$ can be written as
-\begin{align*}
-u&=\frac{\tau}{\sigma +\tau}\\
- &=\frac{1}{1+\frac{\sigma}{\tau}}\\
-\Rightarrow\spatie &\exists  \  u \in \left[0,1\right]: \phi(u)=0 \spatie \text{ as } \frac{\sigma}{\tau} >0
-\end{align*}
-So, there is a solution $u\in \left[0,1\right]$ for which $\phi(u)=0$ and the curve intersects the null cone.
-\end{comment}
-$$\dagger$$
-\\$$\lozenge$$\\
+Be $\phi_0\equiv \phi(0)$ at $P_0$  , $\phi_1\equiv \phi(1)$ at $P_1$. As the $y_i(u)$'s are continuous functions of $u$ so is the function $\phi(u) = a_{mn}y^my^n$ as a  linear combination of these $y_i(u)$'s. As $\phi_0> $ at $P_0$  , $\phi_1<0$ at $P_1$ at $P_1$ (or vice-versa), then by the intermediate Value Theorem of Calculus we know that $\exists  \  u_0 \in \left[0,1\right]$ so that  $\phi(u_0)=0$. hence, the curve will intersect the null-cone.
+$$\lozenge$$\\
 
 
 \textbf{We now investigate the straight segment questions.} \\
-\begin{comment}
 \textit{Case 1: $A$ and $B$ both lie in the present (region I) or in the past (region II)}\\\\
-\\\\
-
-\textit{Case 2: If $A$ is any point in the present, there exist at least one point $B$ in the present that the straight segment $AB$ cuts the null cone}\\\\
-
-\end{comment}
 
 
-
-
-
-
-
-
+\textit{Case 2: If $A$ is any point in the present, there exist at least one point $B$ in the present that the straight segment $AB$ cuts the null cone}\\
 
 
 \begin{comment}
